# ROS2_proj

./: .gitignore  LICENSE  README.md
arm_moveit_config/: .setup_assistant
arm_moveit_config(1)/arm_moveit_config/: .setup_assistant  package.xml
arm_moveit_config/config/: car2.ros2_control.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml
arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  rsp.launch.py  spawn_controllers.launch.py
car2/config/: nav2_params.yaml
car2/launch/: odom.launch.py
car2/maps/: world.yaml
car2/meshes/: base_link.STL  castwheel.STL  leftwheel.STL
car2/urdf/: car2.csv  car2.sdf  car2.urdf
car3/: CMakeLists.txt  package.xml
car3/launch/: display.launch  gazebo.launch
car3/meshes/: finger1.STL  finger2.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL
car3/urdf/: car3.csv  car3.urdf
new_car/: CMakeLists.txt  package.xml
new_car/launch/: display.launch  gazebo.launch
new_car/meshes/: base_link.STL  finger1.STL  finger2.STL  link2.STL  link3.STL  link5.STL  rightwheel.STL
new_car/urdf/: new_car.csv  new_car.urdf
src/car2/: CMakeLists.txt  package.xml
src/car2/config/: bridge.yaml  ekf.yaml  joint_names_car2.yaml  nav2_params.yaml
src/car2/launch/: display.launch.py  gazebo.launch.py  my_world.launch.py  our_world.launch.py
src/car2/maps/: map.pgm  map.yaml
src/car2/meshes/: link1.STL  link4.STL
src/car2/scripts/: robot_description_publisher.py
src/car2/urdf/: car2.csv  car2.sdf  car2.urdf
src/car2/world/: indoor_map.sdf  map_ign.sdf  my_world.sdf
(+19 files in other folders)
