<?xml version="1.0"?>
<package format="3">
  <name>car2</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for car2
  </description>

  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>

  <!-- ROS2 构建系统 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 运行依赖 -->
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>xacro</depend>
  <depend>tf2_ros</depend>
  
  <exec_depend>robot_localization</exec_depend>
  <!-- 可选：Gazebo Harmonic 支持 -->
  <exec_depend>gz_sim</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
